--- a/Exam2024/MainWindow.xaml
+++ b/Exam2024/MainWindow.xaml
@@ -7,6 +7,10 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="250"/>
+        </Grid.RowDefinitions>
+        <TextBlock TextWrapping="Wrap" Text="TextBlock" Margin="10,14,733,14"/>
     </Grid>
 </Window>
