--- a/Exam2024/MainWindow.xaml
+++ b/Exam2024/MainWindow.xaml
@@ -5,12 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Exam2024"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="250"/>
+            <RowDefinition Height="400"/>
         </Grid.RowDefinitions>
-        <TextBlock TextWrapping="Wrap" Text="TextBlock" Margin="10,14,733,14"/>
+        <TextBlock TextWrapping="Wrap" Text="Booking Details" Margin="10,10,591,8" FontSize="24"/>
+        <DatePicker x:Name="query_datebox" HorizontalAlignment="Left" Height="24" Margin="532,20,0,0" VerticalAlignment="Top" Width="110" Grid.Row="1"/>
+        <TextBlock TextWrapping="Wrap" Text="New Booking" Margin="604,8,26,8" FontSize="24"/>
+        <ListBox x:Name="lbx_Customers" HorizontalAlignment="Left" Height="289" Margin="10,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="442" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <DatePicker HorizontalAlignment="Left" Height="24" Margin="191,18,0,0" VerticalAlignment="Top" Width="110"/>
+        <TextBox x:Name="tbx_NoOfCustomers" HorizontalAlignment="Left" Height="21" Margin="532,59,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="tbx_CustomerName" HorizontalAlignment="Left" Height="21" Margin="532,104,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="tbx_ContactNumber" HorizontalAlignment="Left" Height="21" Margin="532,146,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="143"/>
+        <Button Content="Customer Search" HorizontalAlignment="Left" Height="24" Margin="532,190,0,0" Grid.Row="1" VerticalAlignment="Top" Width="110" Click="Button_Click"/>
+        <Button x:Name="btn_delete" Content="Delete Booking" HorizontalAlignment="Left" Height="24" Margin="342,336,0,0" Grid.Row="1" VerticalAlignment="Top" Width="110" Click="btn_delete_Click"/>
+        <TextBlock HorizontalAlignment="Left" Height="20" Margin="10,336,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Capacity: " VerticalAlignment="Top" Width="88"/>
+        <TextBlock HorizontalAlignment="Left" Height="20" Margin="98,338,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Booking: " VerticalAlignment="Top" Width="88"/>
+        <TextBlock HorizontalAlignment="Left" Height="20" Margin="202,338,0,0" Grid.Row="1" TextWrapping="Wrap" Text="Available:" VerticalAlignment="Top" Width="88"/>
     </Grid>
 </Window>
